[package]
name = "zenius_updater"
version = "0.1.0"
authors = ["Mark Blum <mark.n.blum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.0"
select = "0.5.0"
tokio = { version = "1.2.0", features = ["full"] }
